deploy: e7f274f7a829041c29d7213ec9219c783aa21374

--- a/branch/main/docsite/migration_guide.html
+++ b/branch/main/docsite/migration_guide.html
@@ -332,8 +332,8 @@ use any group name or host pattern you prefer.</p>
 <col style="width: 50.0%" />
 </colgroup>
 <thead>
-<tr class="row-odd"><th class="head"><p>Before</p></th>
-<th class="head"><p>After</p></th>
+<tr class="row-odd"><th class="head"><p>gekmihesg.openwrt</p></th>
+<th class="head"><p>community.openwrt</p></th>
 </tr>
 </thead>
 <tbody>
