--- a/pr/62/apk_module.html
+++ b/pr/62/apk_module.html
@@ -203,7 +203,7 @@ To check whether it is installed, run <code class="code docutils literal notrans
 <div class="ansibleOptionAnchor" id="parameter-no_cache"></div><p class="ansible-option-title" id="ansible-collections-community-openwrt-apk-module-parameter-no-cache"><strong>no_cache</strong></p>
 <a class="ansibleOptionLink" href="#parameter-no_cache" title="Permalink to this option"></a><p class="ansible-option-type-line"><span class="ansible-option-type">boolean</span></p>
 </div></td>
-<td><div class="ansible-option-cell"><p>Do not use a local cache files, fetch from index directly.</p>
+<td><div class="ansible-option-cell"><p>Do not use a local cache files, fetch from index directly. Mutually exclusive with (<code class="docutils literal notranslate"><span class="pre">update_cache</span></code>).</p>
 <p class="ansible-option-line"><strong class="ansible-option-choices">Choices:</strong></p>
 <ul class="simple">
 <li><p><code class="ansible-option-default-bold docutils literal notranslate"><strong><span class="pre">false</span></strong></code> <span class="ansible-option-choices-default-mark">← (default)</span></p></li>
@@ -229,7 +229,7 @@ To check whether it is installed, run <code class="code docutils literal notrans
 <div class="ansibleOptionAnchor" id="parameter-update_cache"></div><p class="ansible-option-title" id="ansible-collections-community-openwrt-apk-module-parameter-update-cache"><strong>update_cache</strong></p>
 <a class="ansibleOptionLink" href="#parameter-update_cache" title="Permalink to this option"></a><p class="ansible-option-type-line"><span class="ansible-option-type">boolean</span></p>
 </div></td>
-<td><div class="ansible-option-cell"><p>Update the package cache (<code class="docutils literal notranslate"><span class="pre">apk</span> <span class="pre">update</span></code>) before performing the operation.</p>
+<td><div class="ansible-option-cell"><p>Update the package cache (<code class="docutils literal notranslate"><span class="pre">apk</span> <span class="pre">update</span></code>) before performing the operation. Mutually exclusive with (<code class="docutils literal notranslate"><span class="pre">no_cache</span></code>).</p>
 <p class="ansible-option-line"><strong class="ansible-option-choices">Choices:</strong></p>
 <ul class="simple">
 <li><p><code class="ansible-option-default-bold docutils literal notranslate"><strong><span class="pre">false</span></strong></code> <span class="ansible-option-choices-default-mark">← (default)</span></p></li>
